hphp/hack/test/typecheck/enum_class/typing0.bad.php.rust_elab.exp
File "typing0.bad.php", line 28, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing0.bad.php", line 39, characters 14-23:
Invalid argument (Typing[4110])
  File "typing0.bad.php", line 5, characters 21-23:
  Expected `int`
  File "typing0.bad.php", line 29, characters 8-13:
  But got `string`
  File "typing0.bad.php", line 12, characters 38-38:
    via this generic `T`
